syntax = "proto3";
option go_package = "./;pb";

// 节点类型
enum ENNodeType{
  EN_Node_Unknown = 0;
  EN_Node_Gateway = 1;
  EN_Node_User = 2;
  EN_Node_Problem = 3;
  EN_Node_Judge = 4;
}

message PBNodeInfo{
  ENNodeType node_type = 1; // ENNodeType
  int32 node_id = 2;
  string ip = 3;
  int32 port = 4;
  string name = 5;
}